# refcoco

./: README.md  pyproject.toml
scripts/: download.py
src/refcoco/: refcoco_model.py
src/refcoco/model/: refcoco.py  refcoco_instance.py  refcoco_refexp.py
